# validator_json

./: README.rst  log_20201202-192348.json  pyproject.toml
validator/: cmarker_created.py  label_selected.py  main.py  sleep_created.py  workout_created.py
