[tool.poetry]
name = "validator"
version = "0.1.0"
description = ""
authors = ["azat715 <azat715@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.3.1"
pydantic = "^1.7.3"


[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"
rstcheck = "^3.3.1"

[tool.poetry.scripts]
validator = "validator.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
